--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
 					   </div>
 		
 		
-					<img id="doc-image" src="img/doctoravatar.png" width=150px height=200px alt="text"></center>
+					<img id="doc-image" src="img/DoctorAvatar.png" width=150px height=200px alt="text"></center>
 					<H3>Please select your symptoms: </H3>
 
 					</center>
