Updating avatar URL
Fixing Error: general doc not displaying correctly

--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@ body {
   <div class="column">
     <div class="card">
 	<h1> Dr. Bot </h1>
-	<img id="doc-image" src="img/doctoravatar.png" width=200px height=200px alt="text">
+	<img id="doc-image" src="img/DoctorAvatar.png" width=200px height=200px alt="text">
 	<p> Dr. Bot is a <b>Decision Tree algorithm </b> that will output the most likely disease based on a patient's symptoms.
 	  </p>
 	
