Updates to index.html

--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@ body {
     <div class="card">
 	<h1> Dr. Heart </h1>
 	<img id="doc-image" src="img/cardiologist.png" width=200px height=200px alt="text">
-	<p> Dr. Heart is a <b>Support Vector Machine algorithm </b> that can predict the likelihood of heart disease based on 14 features.</p>
+	<p> Dr. Heart is a <b>Logistic Regression Model</b> that can predict the likelihood of heart disease based on 14 features.</p>
 	</div>
   </div>
   <div class="column">
